2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c (mud_log_open), (mud_log_close), (mud_log_write):  Now
	fsyncs after writes and before closing.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c (mud_log_next_toggled_cb),
	(mud_log_prev_toggled_cb): Grab spinbutton focus when toggled on.
	* ui/main.glade: Made minimum value of log spinbuttons 1.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c: Made 'logging' property writable.
	* src/mud-line-buffer.c (mud_line_buffer_add_data):
	* src/mud-log.c: Vastly improved our logging facilities. Can choose to
	include the entire existing buffer before starting, or just a few
	lines.  Can choose only to log for the next N lines.  Can choose to
	append or overwrite the mud file.  Can choose to not strip the ECMA-48
	color information (We should be parsing this into html or something
	useful).
	* src/mud-window.[ch]: Save Buffer now properly saves the entire
	buffer.  Added update_logging_ui function to update logging related ui
	from the logger.  Checks if the log is actually logging before
	updating ui. 
	* ui/main.glade: Added ui for new log features.

2009-03-20  Les Harris  <lharris@gnome.org>

	* doc/gnome-mud-plugin-api/C/Makefile.am:
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api-C.omf:
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml:
	* doc/gnome-mud-plugin-api/C/monitor.py:
	* doc/gnome-mud-plugin-api/Makefile.am: Removed old plugin docs.
	* doc/gnome-mud.6: Updated man page documentation.

2009-03-20  Les Harris  <lharris@gnome.org>

	* src/handlers/mud-telnet-zmp.c: Explicitly send zmp.indent when zmp
	is activated.
	* src/zmp/zmp-core.[ch]: No longer responds to zmp.ident to comply
	with the ZMP spec.  Now exposes a hashtable populated with the data
	received from the server's zmp.ident.

2009-03-20  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send): Setting the